# show_vallib

./: .gitignore  README.md  TODO.md  example.ipynb  how_to_write_test.md  ner_example.ipynb  ner_example_with_postprocessing.ipynb  old_README.md  pyproject.toml  train_data.pkl
examples/: fairness.ipynb  ner.ipynb  stand_excel.ipynb  stand_excel_writer.ipynb  table.ipynb  yolo_example.ipynb
examples/ner_transformer_example/: ner.ipynb  oos_data.pkl
examples/yolo_example/: oos_dict.pkl  train_dict.pkl
examples/yolo_example/data/: README.dataset.txt  README.roboflow.txt  data.yaml
examples/yolo_test/: test_yolo.ipynb
external_libs/review_object_detection_metrics/: setup.py
external_libs/review_object_detection_metrics/review_object_detection_metrics/: bounding_box.py  tube.py
presentation/: presentation.ipynb
sbe_vallib/: README.md  __init__.py  logger.py  setup.py  tabulartest.py
sbe_vallib/fairness/: example_of_work_new.ipynb
sbe_vallib/nlp/pipelines/: Config_45.xlsx
sbe_vallib/sampler/: __init__.py  supervised_sampler.py
sbe_vallib/scorer/: __init__.py
sbe_vallib/validation/: __init__.py  aggregator.py  basevalidation.py  parser.py  utility.py  validation.py
sbe_vallib/validation/dev/: how_to_write_test.md
sbe_vallib/validation/fairness/: stdlib_extensions.py
sbe_vallib/validation/sampler/: __init__.py  base.py  binary_sampler.py  ner_sampler.py  sampler.py  supervised_sampler.py
sbe_vallib/validation/scorer/: __init__.py  base.py  ner_scorer.py  scorer.py  scorers.py
sbe_vallib/validation/table/: __init__.py  binary.py  (+1 more)
src/sbe_vallib/: .gitignore  TODO.md  __init__.py  parser.py  requirements.txt  validation.py  xlsx_agg.py  xlsx_aggregator.py
src/sbe_vallib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+3590 files in other folders)
